--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-scroll": "^1.8.6"
+    "react-scroll": "^1.8.6",
+    "react-simple-typewriter": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
